--- a/linux/i2pd/i2pd.conf
+++ b/linux/i2pd/i2pd.conf
@@ -97,8 +97,10 @@ verify = true
 ## URLs to request reseed data from, separated by comma
 ## Default: "mainline" I2P Network reseeds
 # urls = https://reseed.i2p-projekt.de/,https://i2p.mooo.com/netDb/,https://netdb.i2p2.no/
-## Path to reseed data file (.su3) for manual reseeding 
+## Path to local reseed data file (.su3) for manual reseeding 
 # file = /path/to/i2pseeds.su3
+## or HTTPS URL to reseed from
+# file = https://legit-website.com/i2pseeds.su3
 
 [addressbook]
 ## AddressBook subscription URL for initial setup
@@ -125,10 +127,10 @@ port = 4444
 
 [socksproxy]
 ## Uncomment and set to 'false' to disable SOCKS Proxy
-enabled = false
+# enabled = true
 ## Address and port service will listen on
-# address = 127.0.0.1
-# port = 4447
+address = 127.0.0.1
+port = 4447
 ## Optional keys file for proxy local destination
 # keys = socks-proxy-keys.dat
 
