--- a/windows_prebuilt/Firefox/App/Firefox/application.ini
+++ b/windows_prebuilt/Firefox/App/Firefox/application.ini
@@ -5,19 +5,19 @@
 Vendor=Mozilla
 Name=Firefox
 RemotingName=firefox
-Version=45.6.0
-BuildID=20161209150850
+Version=45.7.0
+BuildID=20170118123525
 SourceRepository=https://hg.mozilla.org/releases/mozilla-esr45
-SourceStamp=cb2a47acff0513c709bf2481755852e75983e896
+SourceStamp=910ad552cbf529656161b68f394a205216754f06
 ID={ec8030f7-c20a-464f-9b0e-13a3a9e97384}
 
 [Gecko]
-MinVersion=45.6.0
-MaxVersion=45.6.0
+MinVersion=45.7.0
+MaxVersion=45.7.0
 
 [XRE]
 EnableProfileMigrator=1
 
 [Crash Reporter]
 Enabled=0
--
+ServerURL=-
