--- a/windows_prebuilt/Firefox/App/Firefox/webapprt/webapprt.ini
+++ b/windows_prebuilt/Firefox/App/Firefox/webapprt/webapprt.ini
@@ -7,14 +7,14 @@ Vendor=Mozilla
 ; origin, overriding the value below, to make the app runner treat webapps
 ; as distinct products, per bug 747409.
 Name=Webapp Runtime
-Version=45.6.0
-BuildID=20161209150850
+Version=45.7.0
+BuildID=20170118123525
 UAName=Firefox
 
 [Gecko]
-MinVersion=45.6.0
-MaxVersion=45.6.0
+MinVersion=45.7.0
+MaxVersion=45.7.0
 
 [Crash Reporter]
 Enabled=0
--
+ServerURL=-
