[gha] extract downloaded artifacts
Signed-off-by: R4SAS <r4sas@i2pmail.org>

--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -80,8 +80,8 @@ jobs:
       with:
         pattern: i2pdbrowser-${{ steps.commit.outputs.short }}-*
 
-    - name: Display structure of downloaded files
-      run: ls -R
+    - name: Extract artifacts
+      run: unzip i2pdbrowser-${{ steps.commit.outputs.short }}-*
 
     - name: Creating pre-release
       uses: marvinpinto/action-automatic-releases@latest
